--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ before_script:
   - npm install -g bower grunt-cli
   - bower install
 services: mongodb
+service_name: travis-pro
+repo_token: fatlgmjWOTdf040XVwNisT34xFj4NNctP
